# SkillMesh

./: LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-25-skillmesh-implementation.md
docs/superpowers/specs/: 2026-04-25-skillmesh-design.md
examples/: example_skill.yaml  run_example.py
skillmesh/: __init__.py  cli.py  engine.py  skill_loader.py
skillmesh/adapters/: base.py  claude_code.py
skillmesh/models/: context.py  skill.py
skillmesh/utils/: template.py
tests/: test_adapters.py  test_engine.py  test_models.py  test_skill_loader.py
